--- a/app/src/main/res/layout/detail_row_view.xml
+++ b/app/src/main/res/layout/detail_row_view.xml
@@ -8,41 +8,40 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10sp">
-    <ImageView
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_gravity="center_vertical"
-        android:src="@drawable/ic_baseline_keyboard_arrow_down_24"/>
-
-    <TextView
-        android:id="@+id/date_view_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_gravity="center_vertical"
-        android:textStyle="bold"
-        android:layout_centerInParent="true"
-        android:textSize="12sp"
-
-        android:text="2020.12.30 Wednesday" />
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/shopping"/>
 
         <TextView
-            android:id="@+id/income_view_text"
+            android:id="@+id/event_name_view_text_indetail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="90dp"
-            android:textColor="#4CAF50"
+            android:layout_marginLeft="30dp"
             android:layout_gravity="center_vertical"
             android:textStyle="bold"
             android:layout_centerInParent="true"
             android:textSize="12sp"
-            android:text="$0" />
+            android:text="Lunch" />
 
         <TextView
-            android:id="@+id/expenses_view_text"
+            android:id="@+id/description_view_text_indetail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="60dp"
+            android:textColor="#B3AEAE"
+            android:layout_gravity="center_vertical"
+            android:textStyle="bold"
+            android:layout_centerInParent="true"
+            android:textSize="12sp"
+            android:text="In School" />
+
+        <TextView
+            android:id="@+id/expenses_view_text_indetail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="135dp"
             android:textColor="#F44336"
             android:layout_gravity="center_vertical"
             android:textStyle="bold"
