Add  "add Fragment"

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -15,5 +15,9 @@
         android:id="@+id/navigation_profile"
         android:icon="@drawable/user"
         android:title="@string/title_notifications" />
+    <item
+        android:id="@+id/navigation_add"
+        android:icon="@drawable/ic_baseline_add_24"
+        android:title="Add" />
 
 </menu>
