--- a/app/src/main/res/drawable/underline.xml
+++ b/app/src/main/res/drawable/underline.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item>
         <shape>
-            <solid android:color="@color/black" />
+            <solid android:color="#8A8787" />
         </shape>
     </item>
 
