--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,24 +7,26 @@
 
     <fragment
         android:id="@+id/navigation_transaction"
-        android:name="com.example.mobilebookkeeping.ui.transaction.TransactionFragment"
+        android:name="com.example.mobilebookkeeping.TransactionFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_transaction" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.example.mobilebookkeeping.ui.dashboard.DashBoardFragment"
+        android:name="com.example.mobilebookkeeping.DashboardFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
         android:id="@+id/navigation_profile"
-        android:name="com.example.mobilebookkeeping.ui.profile.ProfileFragment"
+        android:name="com.example.mobilebookkeeping.ProfileFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_profile" />
 
-    <fragment
-        android:id="@+id/navigation_add"
-        android:name="com.example.mobilebookkeeping.ui.add.AddFragment"
-        tools:layout="@layout/add_event" />
+<!--    <fragment-->
+<!--        android:id="@+id/navigation_add"-->
+<!--        android:name="com.example.mobilebookkeeping.ui.add.AddFragment"-->
+<!--        tools:layout="@layout/add_event" />-->
+
+
 </navigation>
