--- a/app/src/main/res/layout/detail_row_view.xml
+++ b/app/src/main/res/layout/detail_row_view.xml
@@ -4,32 +4,38 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10sp">
         <ImageView
+            android:id="@+id/image"
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:layout_alignParentStart="true"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/shopping"/>
+            android:src="@drawable/shopping"
+            android:layout_alignParentLeft="true" />
 
         <TextView
             android:id="@+id/event_name_view_text_indetail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
+            android:layout_alignStart="@+id/image"
             android:layout_gravity="center_vertical"
             android:textStyle="bold"
             android:layout_centerInParent="true"
             android:textSize="12sp"
-            android:text="Lunch" />
+            android:text="Lunch"
+            android:layout_alignLeft="@+id/image"
+            android:layout_marginStart="30dp"
+            android:layout_marginLeft="30dp" />
 
         <TextView
-            android:id="@+id/description_view_text_indetail"
-            android:layout_width="wrap_content"
+            android:id="@+id/comment_view_text_indetail"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="60dp"
+            android:layout_marginLeft="40dp"
             android:textColor="#B3AEAE"
             android:layout_gravity="center_vertical"
             android:textStyle="bold"
@@ -41,15 +47,17 @@
             android:id="@+id/expenses_view_text_indetail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="135dp"
-            android:textColor="#F44336"
+            android:layout_alignParentEnd="true"
             android:layout_gravity="center_vertical"
-            android:textStyle="bold"
-            android:layout_centerInParent="true"
+            android:gravity="fill_horizontal"
+            android:layout_centerVertical="true"
+            android:text="$14"
+            android:textColor="#F44336"
             android:textSize="12sp"
-            android:text="$14" />
+            android:textStyle="bold"
+            android:layout_alignParentRight="true" />
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
