--- a/app/src/main/res/layout/add_event.xml
+++ b/app/src/main/res/layout/add_event.xml
@@ -104,7 +104,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="100dp"
+            android:layout_marginLeft="60dp"
             android:hint="$0"
             android:imeOptions="actionDone"
             android:inputType="number"
@@ -113,7 +113,22 @@
             android:textSize="16dp"
             android:textStyle="italic" />
 
+        <ToggleButton
+            android:id="@+id/toggle_button"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="20dp"
+            android:textOff="Expense"
+            android:textOn="Income"
+            >
+
+
+        </ToggleButton>
+
     </LinearLayout>
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -158,11 +173,13 @@
 
     <Button
         android:id="@+id/done_button"
-        android:layout_width="300dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:backgroundTint="@color/black"
         android:layout_gravity="center"
         android:text="@string/done"
+        android:textColor="@color/white"
+        android:textSize="30sp"
         />
 </LinearLayout>
