Add  "Profile Page"

--- a/app/src/main/res/layout/add_event.xml
+++ b/app/src/main/res/layout/add_event.xml
@@ -42,6 +42,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/add_event_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
@@ -68,14 +69,36 @@
         android:layout_height="36dp"
         android:src="@drawable/meal"
         />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:textSize="16dp"
-        android:textColor="@color/black"
-        android:layout_gravity="center_vertical"
-        android:text="Select a category:                            Dining"/>
+
+        <RelativeLayout
+            android:id="@+id/category_row"
+            android:layout_width="344dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="10dp"
+
+                android:text="Select a category:"
+                android:textColor="@color/black"
+                android:textSize="16dp" />
+
+            <TextView
+                android:id="@+id/category_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="10dp"
+                android:text="Dining"
+                android:translationX="250dp"
+                android:textColor="@color/black"
+                android:textSize="16dp" />
+
+        </RelativeLayout>
+
 
     </LinearLayout>
 
