--- a/app/src/main/res/layout/detail_row_view.xml
+++ b/app/src/main/res/layout/detail_row_view.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
+    android:id="@+id/detail_row_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -13,7 +15,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_alignParentStart="true"
-            android:layout_gravity="center_vertical"
+            android:layout_centerVertical="true"
             android:src="@drawable/shopping"
             android:layout_alignParentLeft="true" />
 
