--- a/app/app/src/main/res/layout/add_event.xml
+++ b/app/app/src/main/res/layout/add_event.xml
@@ -87,7 +87,7 @@
                 android:textSize="16dp" />
 
             <TextView
-                android:id="@+id/category_textview"
+                android:id="@+id/category_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
