--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,4 +22,6 @@
     <style name="Theme.Mob.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.Mob.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="myTheme" parent="Theme.AppCompat" />
+
 </resources>
