--- a/app/src/main/res/layout/add_event.xml
+++ b/app/src/main/res/layout/add_event.xml
@@ -92,10 +92,10 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_margin="10dp"
-                android:text="Dining"
+                android:hint="@string/select"
                 android:translationX="250dp"
                 android:textColor="@color/black"
-                android:textSize="16dp" />
+                android:textSize="16sp" />
 
         </RelativeLayout>
 
@@ -117,10 +117,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:textColor="@color/black"
             android:layout_gravity="center_vertical"
-            android:text="Enter the amount:"/>
+            android:text="@string/enter_the_amount"/>
 
         <EditText
             android:id="@+id/amount"
@@ -128,22 +128,22 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="60dp"
-            android:hint="$0"
+            android:hint="@string/amount_hint"
             android:imeOptions="actionDone"
             android:inputType="number"
 
             android:textColor="#F44336"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:textStyle="italic" />
 
         <ToggleButton
             android:id="@+id/toggle_button"
-            android:layout_width="100dp"
+            android:layout_width="110dp"
             android:layout_height="40dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="20dp"
-            android:textOff="Expense"
-            android:textOn="Income"
+            android:layout_marginLeft="10dp"
+            android:textOff="@string/expense"
+            android:textOn="@string/income"
             >
 
 
@@ -175,10 +175,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:textColor="@color/black"
                 android:layout_gravity="center_vertical"
-                android:text="Enter Comment:"/>
+                android:text="@string/add_comment"/>
             </LinearLayout>
 
         <EditText
@@ -187,10 +187,12 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:padding="10dp"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:textColor="#F44336"
             android:layout_gravity="center_vertical"
-            android:hint="leave comment here"/>
+            android:imeOptions="actionDone"
+            android:singleLine="true"
+            android:hint="@string/comment_hint"/>
 
     </LinearLayout>
 
