--- a/app/src/main/res/layout/category_row_view.xml
+++ b/app/src/main/res/layout/category_row_view.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView
     android:id="@+id/category_row_view"
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
