--- a/app/src/main/res/layout/detail_row_view.xml
+++ b/app/src/main/res/layout/detail_row_view.xml
@@ -10,14 +10,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10sp">
+
         <ImageView
             android:id="@+id/image"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/shopping"
-            android:layout_alignParentLeft="true" />
+            android:src="@drawable/meal" />
 
         <TextView
             android:id="@+id/event_name_view_text_indetail"
@@ -27,8 +28,7 @@
             android:layout_gravity="center_vertical"
             android:textStyle="bold"
             android:layout_centerInParent="true"
-            android:textSize="12sp"
-            android:text="Lunch"
+            android:textSize="14sp"
             android:layout_alignLeft="@+id/image"
             android:layout_marginStart="30dp"
             android:layout_marginLeft="30dp" />
@@ -42,8 +42,8 @@
             android:layout_gravity="center_vertical"
             android:textStyle="bold"
             android:layout_centerInParent="true"
-            android:textSize="12sp"
-            android:text="In School" />
+            android:textSize="14sp"
+             />
 
         <TextView
             android:id="@+id/income_view_text_indetail"
@@ -52,9 +52,8 @@
             android:layout_gravity="center_vertical"
             android:gravity="fill_horizontal"
             android:layout_centerVertical="true"
-            android:text="$14"
             android:textColor="#A4C639"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             android:layout_alignRight="@+id/comment_view_text_indetail" />
 
@@ -66,9 +65,8 @@
             android:layout_gravity="center_vertical"
             android:gravity="fill_horizontal"
             android:layout_centerVertical="true"
-            android:text="$14"
             android:textColor="#F44336"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             android:layout_alignParentRight="true" />
 
