--- a/app/src/main/res/layout/pie_chart.xml
+++ b/app/src/main/res/layout/pie_chart.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,6 +9,11 @@
 
     tools:context=".MainActivity">
 
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/layout_piechart"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        />
 
     <!-- Pie chart and details of pie chart -->
     <androidx.cardview.widget.CardView
@@ -36,10 +40,6 @@
 
             <!--Pie chart to display the data-->
 
-            <com.github.mikephil.charting.charts.PieChart
-                android:id="@+id/layout_piechart"
-                android:layout_width="220dp"
-                android:layout_height="220dp" />
             <!--</LinearLayout>-->
 
 
@@ -52,6 +52,11 @@
                 android:orientation="vertical"
                 android:gravity="center_vertical"
                 >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Top 4 spending: "
+                    android:paddingLeft="10dp"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -59,16 +64,16 @@
                     android:layout_gravity="center_vertical">
 
                     <!--View to display the yellow color icon-->
-                    <View
+                    <ImageView
                         android:layout_width="15dp"
                         android:layout_height="match_parent"
-                        android:background="@color/purple_500"/>
+                        android:id="@+id/pieChartImage1"/>
 
                     <!--Text view to display R -->
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="R"
+                        android:id="@+id/pieChartTextView1"
                         android:paddingLeft="10dp"/>
 
                 </LinearLayout>
@@ -81,16 +86,16 @@
                     android:layout_marginTop="5dp">
 
                     <!--View to display the green color icon-->
-                    <View
+                    <ImageView
                         android:layout_width="15dp"
                         android:layout_height="match_parent"
-                        android:background="@color/white"/>
+                        android:id="@+id/pieChartImage2"/>
 
                     <!--Text view to display python text -->
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Python"
+                        android:id="@+id/pieChartTextView2"
                         android:paddingLeft="10dp"/>
 
                 </LinearLayout>
@@ -103,16 +108,16 @@
                     android:layout_marginTop="5dp">
 
                     <!--View to display the red color icon-->
-                    <View
+                    <ImageView
                         android:layout_width="15dp"
                         android:layout_height="match_parent"
-                        android:background="@color/teal_700"/>
+                        android:id="@+id/pieChartImage3"/>
 
                     <!--Text view to display C++ text -->
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="C++"
+                        android:id="@+id/pieChartTextView3"
                         android:paddingLeft="10dp"/>
 
                 </LinearLayout>
@@ -125,16 +130,17 @@
                     android:layout_marginTop="5dp">
 
                     <!--View to display the blue color icon-->
-                    <View
+                    <ImageView
                         android:layout_width="15dp"
                         android:layout_height="match_parent"
-                        android:background="@color/purple_700"/>
+                        android:id="@+id/pieChartImage4"/>
 
                     <!--Text view to display Java text -->
                     <TextView
+
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Java"
+                        android:id="@+id/pieChartTextView4"
                         android:paddingLeft="10dp"/>
 
                 </LinearLayout>
