--- a/app/src/main/res/layout/category_row_view.xml
+++ b/app/src/main/res/layout/category_row_view.xml
@@ -13,16 +13,16 @@
             android:layout_margin="10dp"
             android:layout_width="36dp"
             android:layout_height="36dp"
-            android:src="@drawable/meal"
+            android:src="@drawable/other"
             />
         <TextView
             android:id="@+id/category_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:textSize="24dp"
+            android:textSize="24sp"
             android:layout_gravity="center_vertical"
-            android:text="Dining"/>
+           />
 
     </LinearLayout>
 
