--- a/app/src/main/res/layout/add_event.xml
+++ b/app/src/main/res/layout/add_event.xml
@@ -19,25 +19,19 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="2020"
+                android:text="@string/_2021"
                 android:textStyle="bold"
                 android:textColor="@color/white"
-                android:textSize="24dp"/>
+                android:textSize="24sp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="December"
+                android:text="@string/feb"
                 android:textStyle="bold"
                 android:textColor="@color/white"
-                android:textSize="18dp"/>
+                android:textSize="18sp"/>
         </LinearLayout>
-        <Button
-            android:layout_width="28dp"
-            android:layout_height="28dp"
-            android:layout_margin="10dp"
-            android:background="@drawable/ic_baseline_keyboard_arrow_down_24"
-            android:layout_gravity="center_vertical"
-            />
+
 
     </LinearLayout>
 
@@ -47,9 +41,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
         android:textStyle="bold"
-        android:textSize="24dp"
+        android:textSize="24sp"
         android:textColor="@color/black"
-        android:text="Creating New Event"
        />
 
     <View
@@ -82,9 +75,9 @@
                 android:layout_gravity="center_vertical"
                 android:layout_margin="10dp"
 
-                android:text="Select a category:"
+                android:text="@string/select_a_category"
                 android:textColor="@color/black"
-                android:textSize="16dp" />
+                android:textSize="16sp" />
 
             <Button
                 android:id="@+id/category_button"
@@ -131,7 +124,6 @@
             android:hint="@string/amount_hint"
             android:imeOptions="actionDone"
             android:inputType="number"
-
             android:textColor="#F44336"
             android:textSize="16sp"
             android:textStyle="italic" />
