--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -10,10 +10,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/login_button"
+        android:textSize="30sp"
         android:layout_centerInParent="true"
-        android:drawableTop="@drawable/fui_ic_facebook_white_22dp"
         android:backgroundTint="@color/teal_200"
-        android:text="Login"/>
+        android:text="@string/login"/>
 
     <ImageView
         android:layout_width="100dp"
@@ -22,6 +22,6 @@
         android:id="@+id/movie_quotes_icon"
         android:layout_above="@+id/login_button"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/fui_ic_facebook_white_22dp"
+        android:src="@drawable/user"
         />
 </RelativeLayout>
